# flask-skeleton

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 5b988b90c0dc_initial_db.py  5eeeb1abba60_initial_db.py  af499321505e_add_timestamps_to_book.py  afc345a64ae7_add_author_preferences_json.py
src/my_web/: app.py  config.py  errors.py  extensions.py  models.py
src/my_web/db/: fixtures.py  models.py
src/my_web/forms/: auth.py
src/my_web/routes/: auth.py  book.py  home.py  user.py
src/my_web/schemas/: author.py  base.py  book.py  pagination.py  user.py
src/my_web/services/: author.py  base.py  book.py
src/my_web/static/css/: dark-table-fix.css  tabulator-custom.css
src/my_web/static/js/: datatable.js  formatters.js  theme.js
src/my_web/templates/: _menu.html  base.html
src/my_web/templates/auth/: login.html  register.html
src/my_web/templates/book/: book.html  books.html
src/my_web/templates/errors/: 404.html  500.html
src/my_web/templates/home/: about.html  index.html
src/my_web/templates/user/: profile.html
tests/: conftest.py  test_app.py  test_auth.py  test_author_json.py  test_author_service.py  test_book.py  test_book_service.py  test_cli.py  test_home.py  test_models.py  test_prepare.py  test_schemas.py  test_timestamps.py  test_user.py
