[project]
name = "my_web"
version = "0.1.0"
description = "Flask skeleton: shows concepts, prevent repeating boilerplate code"
readme = "README.md"
authors = [
    { name = "Ondrej Profant", email = "ondrej.profant@gmail.com" }
]
requires-python = ">=3.13.0, <3.14"
dependencies = [
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "ipython>=9.6.0",
    "pydantic-settings>=2.11.0",
]

[project.scripts]
web = "my_web.app:run"
shell = "my_web.app:shell"
help = "my_web.app:app_help"
db-init = "my_web.app:db_init"
db-migrate = "my_web.app:db_migrate"
db-upgrade = "my_web.app:db_upgrade"
db-fixtures = "my_web.app:db_fixtures"
db-current = "my_web.app:db_current"
db-history = "my_web.app:db_history"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
